package strategy.model;

public interface Strategy {
    public void execute();
}
